2009-02-21 17:17:04 +0800
* jQuery.support.scriptEval: 脚步->脚本 (感谢zzguo28)

2009-02-16 23:41:07 +0800
* live的type参数说明
* error的说明

2009-02-12 20:59:39 +0800
+ jQuery.extend 增加deep参数
+ serializeArray() longdesc
* jQuery.browser、jQuery.browser.version、jQuery.boxModel错别字

2009-02-3 02:16:56 +0800
* isFunction增加新说明
* jQuery.browser、jQuery.browser.version、jQuery.boxModel 以上三个在jQuery 1.3.1中不赞成使用
* outerHeight、outerWidth 默认值


###########################################################
# 以下为原HTML版更新，之后的更新只针对XML，HTML不再更新。 #
###########################################################


2009-01-29 15:06:40 +0800
+ 工具里新增merge和param两个函数
* unique和trim的返回值有误

2009-01-28 16:46:25 +0800
* bind的说明里多了个I
* hide,toggle的callback参数类型为FunctionFunction
* show,hide,toggle的callback参数为(Optional)改为(可选)

2009-01-24 00:55:18 +0800
* [attribute!=value] jQuery 1.3.1中意义恢复

2009-01-21 20:23:38 +0800
* #4 关于1.3版的日期 (感谢liushuang630)
* #5 die()的标题误为toggle() (感谢dadao5.com)
* queue([name],callback) queue([name],queue)少参数 (感谢Horatio)

2009-01-19 00:00:10 +0800
+ offsetParent()
* closest() 说明

2009-01-18 16:06:52 +0800
* triggerHandler 进一步说明
* trigger 进一步说明

2009-01-17 22:37:11 +0800
* live() - 与bind()不同的是，live()一次只能绑定一个事件。
* [attribute!=value] jQuery 1.3中意义改变
* load 的data参数在jQuery 1.3中也可以接受String
+ ajax的error回调的第二个参数可能值"timeout", "error", "notmodified" 和 "parsererror"
+ ajax参数xhr
* animate 的duration为0的问题
* show, hide, toggle, slideDown, slideUp, slideToggle 在jQuery 1.3中，padding和margin也会有动画，效果更流畅。
* jQuery(html,[ownerDocument])等效于$(document.createElement("span")
* is支持复杂表达式

2009-01-17 18:31:10 +0800
+ jQuery.support.scriptEval
+ 原 Dimension 插件功能（1.2.6版加入jQuery核心）

2009-01-16 19:11:10 +0800
+ jQuery.fx.off
+ toggleClass( class, switch )
+ toggle( switch )
+ toggle(speed,[callback])
* 修改queue和dequeue方法的参数和说明

2009-01-15 22:31:02 +0800
* jQuery(html,[ownerDocument])
+ jQuery.selector
+ jQuery.context
* 效果下的queue和dequeue搬到核心下
+ live()
+ die()
+ closest()
* stop( [clearQueue], [gotoEnd]) 增加两个参数
+ jQuery.support